ci(sonar): require the quality gate on development/** too, as a pattern
The requirement on `main` alone would have bitten once per milestone, at the
release integration PR, while every pull request that actually carries the work
merges into the development line. That line had no protection at all.

It is a `development/**` pattern rather than `development/0.12.0`, so the next
milestone's branch inherits it instead of someone remembering to re-create the
rule — the failure mode of a per-branch rule being that it silently covers
nothing the day the version bumps. Verified to bind rather than assumed: the
REST protection endpoint for `development/0.12.0` returns all three contexts.

Two settings differ from `main`, both deliberate and both easy to reverse. No
approving-review requirement, because the request was about checks and adding a
review gate would change who can merge, not what must be green. And `strict`
(up to date before merging) off: with many pull requests open against one
development branch, requiring each to be rebased onto every landing serialises
merges, for a benefit the checks re-running on the merge commit largely already
give.

Not touched: the `preview` branch has its own rule and requires only the two
GitHub Actions checks. That track builds on a newest-JDK line with
`--enable-preview`, which is precisely the condition this milestone found the
analyser cannot be assumed to handle, so requiring the gate there should follow
a run that shows what it reports rather than precede one.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SnG46cbV1eUsDnKxnjvuii